Bug 1920799 - Add a new messaging surface to the AppMenu and PXI menus for describing the value of signing into an FxA. r=pdahiya,Gijs,desktop-theme-reviewers,omc-reviewers,home-newtab-reviewers,fluent-reviewers,hjones,skhamis,nbarrett
Developing tests in a later patch in this series.

Differential Revision: https://phabricator.services.mozilla.com/D223409

UltraBlame original commit: e81d1a9c3077ab3a308ac065ac62a685d38485d3

--- a/browser/themes/shared/customizableui/panelUI-shared.css
+++ b/browser/themes/shared/customizableui/panelUI-shared.css
@@ -4827,6 +4827,123 @@ states
 .
 *
 /
+#
+appMenu
+-
+mainView
+:
+not
+(
+[
+showing
+-
+fxa
+-
+menu
+-
+message
+]
+)
+#
+appMenu
+-
+fxa
+-
+menu
+-
+message
+#
+PanelUI
+-
+fxa
+:
+not
+(
+[
+showing
+-
+fxa
+-
+menu
+-
+message
+]
+)
+#
+PanelUI
+-
+fxa
+-
+menu
+-
+message
+{
+display
+:
+none
+;
+}
+#
+appMenu
+-
+mainView
+[
+showing
+-
+fxa
+-
+menu
+-
+message
+]
+{
+&
+#
+appMenu
+-
+fxa
+-
+status2
+&
+#
+appMenu
+-
+fxa
+-
+separator
+{
+display
+:
+none
+;
+}
+}
+#
+PanelUI
+-
+fxa
+[
+showing
+-
+fxa
+-
+menu
+-
+message
+]
+#
+fxa
+-
+manage
+-
+account
+-
+button
+{
+display
+:
+none
+}
 :
 root
 :
