Bug 1893734 - Adjust heading elements on HNT r=home-newtab-reviewers,ayeddi,accessibility-frontend-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D224499

UltraBlame original commit: f3eb411b6184d49306c5be66f6049bf7de058412

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSThumbsUpDownButtons/_DSThumbsUpDownButtons.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSThumbsUpDownButtons/_DSThumbsUpDownButtons.scss
@@ -397,7 +397,9 @@ main
 {
 margin
 -
-top
+block
+-
+start
 :
 var
 (
@@ -466,6 +468,8 @@ padding
 0
 ;
 margin
+-
+block
 :
 var
 (
@@ -475,7 +479,6 @@ space
 -
 xxlarge
 )
-0
 ;
 .
 logo
@@ -486,7 +489,34 @@ wordmark
 {
 margin
 -
-bottom
+block
+-
+end
+:
+var
+(
+-
+-
+space
+-
+xxlarge
+)
+;
+}
+.
+logo
+-
+and
+-
+wordmark
+-
+wrapper
+{
+margin
+-
+block
+-
+end
 :
 var
 (
@@ -512,7 +542,9 @@ padding
 ;
 margin
 -
-top
+block
+-
+start
 :
 0
 ;
@@ -542,7 +574,9 @@ wrapper
 {
 margin
 -
-top
+block
+-
+start
 :
 0
 ;
