--- a/browser/components/newtab/content-src/components/Logo/_Logo.scss
+++ b/browser/components/newtab/content-src/components/Logo/_Logo.scss
@@ -4,6 +4,28 @@ logo
 and
 -
 wordmark
+-
+wrapper
+{
+/
+/
+Override
+default
+h1
+margins
+margin
+-
+block
+:
+0
+;
+}
+.
+logo
+-
+and
+-
+wordmark
 {
 logo
 -
@@ -35,7 +57,9 @@ center
 ;
 margin
 -
-bottom
+block
+-
+end
 :
 48px
 ;
@@ -68,7 +92,9 @@ b
 {
 margin
 -
-bottom
+block
+-
+end
 :
 32px
 ;
@@ -126,7 +152,9 @@ stories
 {
 margin
 -
-bottom
+block
+-
+end
 :
 40px
 ;
