--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -6287,6 +6287,22 @@ logo
 and
 -
 wordmark
+-
+wrapper
+{
+margin
+-
+block
+:
+0
+;
+}
+.
+logo
+-
+and
+-
+wordmark
 {
 align
 -
@@ -6306,7 +6322,9 @@ center
 ;
 margin
 -
-bottom
+block
+-
+end
 :
 48px
 ;
@@ -6338,7 +6356,9 @@ wordmark
 {
 margin
 -
-bottom
+block
+-
+end
 :
 32px
 ;
@@ -6382,7 +6402,9 @@ wordmark
 {
 margin
 -
-bottom
+block
+-
+end
 :
 40px
 ;
@@ -48608,7 +48630,9 @@ main
 {
 margin
 -
-top
+block
+-
+start
 :
 var
 (
@@ -48681,6 +48705,8 @@ padding
 0
 ;
 margin
+-
+block
 :
 var
 (
@@ -48690,7 +48716,6 @@ space
 -
 xxlarge
 )
-0
 ;
 }
 .
@@ -48712,7 +48737,44 @@ wordmark
 {
 margin
 -
-bottom
+block
+-
+end
+:
+var
+(
+-
+-
+space
+-
+xxlarge
+)
+;
+}
+.
+thumbs
+-
+ui
+-
+compact
+.
+search
+-
+wrapper
+.
+logo
+-
+and
+-
+wordmark
+-
+wrapper
+{
+margin
+-
+block
+-
+end
 :
 var
 (
@@ -48749,7 +48811,9 @@ padding
 ;
 margin
 -
-top
+block
+-
+start
 :
 0
 ;
@@ -48796,7 +48860,9 @@ wrapper
 {
 margin
 -
-top
+block
+-
+start
 :
 0
 ;
