Bug 1812019 - Animate to static tab icon after 45s r=cmkm,dao,desktop-theme-reviewers,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224490

UltraBlame original commit: 495128bbc3780b459e1f76fe004c96df81765383

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2884,6 +2884,32 @@ height
 100
 %
 ;
+/
+*
+this
+runs
+tab
+-
+throbber
+-
+animation
+43
+times
+(
+~
+45s
+)
+and
+delays
+swap
+-
+icon
+-
+animation
+by
+45s
+*
+/
 animation
 :
 tab
@@ -2898,7 +2924,17 @@ steps
 (
 30
 )
-infinite
+43
+swap
+-
+icon
+-
+animation
+0s
+linear
+45s
+1
+forwards
 ;
 -
 moz
@@ -3149,6 +3185,82 @@ translateX
 (
 100
 %
+)
+;
+}
+}
+keyframes
+swap
+-
+icon
+-
+animation
+{
+0
+%
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+loading
+.
+svg
+"
+)
+;
+transform
+:
+translateX
+(
+0
+)
+;
+}
+100
+%
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+hourglass
+.
+svg
+"
+)
+;
+transform
+:
+translateX
+(
+0
 )
 ;
 }
