Bug 1921088 - Upgrade Stylelint and related libraries to the latest version r=Standard8,devtools-reviewers,omc-reviewers,home-newtab-reviewers,nchevobbe,thecount,desktop-theme-reviewers,dao,aminomancer
In addition to upgrding our Stylelint packages, this patch also introduces the stylistic/stylelint-plugin to preserve a number of rules that were completely removed in v16. It also migrates the code for the custom plugin introduced in bug 1838298 to ES Modules.

Differential Revision: https://phabricator.services.mozilla.com/D224250

UltraBlame original commit: 4861708c7796d41cac2dea369edb18d0ad90850b

--- a/browser/components/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/aboutwelcome/content/aboutwelcome.css
@@ -89,7 +89,7 @@ background
 -
 light
 #
-fff
+FFF
 )
 ;
 -
@@ -425,7 +425,7 @@ background
 -
 light
 #
-0061e0
+0061E0
 )
 ;
 -
@@ -513,7 +513,7 @@ hover
 -
 light
 #
-0250bb
+0250BB
 )
 ;
 -
@@ -609,7 +609,7 @@ active
 -
 light
 #
-053e94
+053E94
 )
 ;
 -
@@ -2590,7 +2590,7 @@ background
 -
 light
 #
-fff
+FFF
 )
 ;
 -
@@ -2926,7 +2926,7 @@ background
 -
 light
 #
-0061e0
+0061E0
 )
 ;
 -
@@ -3014,7 +3014,7 @@ hover
 -
 light
 #
-0250bb
+0250BB
 )
 ;
 -
@@ -3110,7 +3110,7 @@ active
 -
 light
 #
-053e94
+053E94
 )
 ;
 -
