--- a/browser/components/asrouter/content-src/styles/_feature-callout-theme.scss
+++ b/browser/components/asrouter/content-src/styles/_feature-callout-theme.scss
@@ -115,7 +115,7 @@ background
 -
 light
 #
-fff
+FFF
 )
 ;
 -
@@ -451,7 +451,7 @@ background
 -
 light
 #
-0061e0
+0061E0
 )
 ;
 -
@@ -539,7 +539,7 @@ hover
 -
 light
 #
-0250bb
+0250BB
 )
 ;
 -
@@ -635,7 +635,7 @@ active
 -
 light
 #
-053e94
+053E94
 )
 ;
 -
