Bug 1924650 - Set text color on footer buttons. r=desktop-theme-reviewers,Itiel
Differential Revision: https://phabricator.services.mozilla.com/D225773

UltraBlame original commit: 942708472aadcafd1ea71b60fd973f769b133f66

--- a/toolkit/themes/shared/global-shared.css
+++ b/toolkit/themes/shared/global-shared.css
@@ -2337,6 +2337,21 @@ disabled
 :
 hover
 {
+color
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+hover
+)
+;
 background
 -
 color
@@ -2361,6 +2376,21 @@ hover
 :
 active
 {
+color
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+active
+)
+;
 background
 -
 color
@@ -2421,6 +2451,23 @@ primary
 :
 hover
 {
+color
+:
+var
+(
+-
+-
+button
+-
+text
+-
+color
+-
+primary
+-
+hover
+)
+;
 background
 -
 color
