--- a/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -288,6 +288,42 @@ overflow
 :
 hidden
 ;
+position
+:
+relative
+;
+}
+.
+sources
+-
+list
+.
+debugger
+-
+settings
+-
+menu
+-
+button
+{
+position
+:
+absolute
+;
+top
+:
+5px
+;
+right
+:
+5px
+;
+z
+-
+index
+:
+5
+;
 }
 .
 sources
