Bug 1922024 - Add addons.mozilla.org to the Spotlight CSP r=omc-reviewers,mviar
Addon icons for about:welcome screens were not displaying correctly on about:messagepreview, due to the fact that the about:welcome message is displayed using a modified Spotlight. I've added addons.mozilla.org to the Spotlight CSP, which should also help with display issues using the picker in other Spotlight messages.

I've also updated the about:messagepreview CSP to be similar to the about:welcome one, which made sense to me since they are similar surfaces with similar messages.

Differential Revision: https://phabricator.services.mozilla.com/D224993

UltraBlame original commit: eae0479080145e2e7245a7849ecc3206f7d48e0b

--- a/browser/components/messagepreview/messagepreview.html
+++ b/browser/components/messagepreview/messagepreview.html
@@ -101,10 +101,9 @@ content
 default
 -
 src
-resource
-:
-chrome
-:
+'
+none
+'
 ;
 object
 -
@@ -113,10 +112,62 @@ src
 none
 '
 ;
+script
+-
+src
+resource
+:
+chrome
+:
+;
+media
+-
+src
+resource
+:
+chrome
+:
+https
+:
+/
+/
+assets
+.
+mozilla
+.
+net
+https
+:
+/
+/
+www
+.
+mozilla
+.
+org
+;
+connect
+-
+src
+https
+:
+;
 img
 -
 src
+https
+:
 data
+:
+blob
+:
+chrome
+:
+;
+style
+-
+src
+resource
 :
 chrome
 :
