--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -673,6 +673,47 @@ height
 :
 120px
 ;
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+verticalTabs
+"
+)
+{
+min
+-
+width
+:
+670px
+;
+}
 }
 /
 *
