Bug 1920803 - Clicking anywhere on the search bar in contextual password manager always focuses input. r=credential-management-reviewers,desktop-theme-reviewers,dao,dimi
Differential Revision: https://phabricator.services.mozilla.com/D224028

UltraBlame original commit: 8807c4b4d3d216fb2655889ce39dc9a5c736f809

--- a/toolkit/components/satchel/megalist/content/megalist.css
+++ b/toolkit/components/satchel/megalist/content/megalist.css
@@ -1475,8 +1475,19 @@ height
 32px
 ;
 padding
+-
+inline
+-
+start
 :
-8px
+var
+(
+-
+-
+space
+-
+small
+)
 ;
 cursor
 :
@@ -1486,7 +1497,16 @@ border
 -
 radius
 :
-4px
+var
+(
+-
+-
+border
+-
+radius
+-
+small
+)
 ;
 border
 :
@@ -1512,11 +1532,6 @@ sizing
 border
 -
 box
-;
-width
-:
-100
-%
 ;
 display
 :
@@ -1575,10 +1590,6 @@ no
 -
 repeat
 ;
-fill
-:
-currentColor
-;
 -
 moz
 -
@@ -1588,9 +1599,22 @@ properties
 :
 fill
 ;
+fill
+:
+currentColor
+;
 width
 :
-18px
+var
+(
+-
+-
+icon
+-
+size
+-
+default
+)
 ;
 margin
 -
@@ -1598,7 +1622,14 @@ inline
 -
 end
 :
-4px
+var
+(
+-
+-
+space
+-
+xsmall
+)
 ;
 flex
 -
@@ -1623,6 +1654,11 @@ transparent
 outline
 :
 none
+;
+width
+:
+100
+%
 ;
 }
 .
