Bug 1924940 - Don't hide caption buttons with mica enabled if accent-color-in-titlebar is also enabled. r=desktop-theme-reviewers,dao
For now this will do. If this gets more complicated we can refactor all
these queries into something more sensible.

Differential Revision: https://phabricator.services.mozilla.com/D225947

UltraBlame original commit: e85828a3bf147cba44a0c644dd7b40ab09edb2ea

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -273,6 +273,34 @@ transparent
 ;
 /
 *
+Accent
+color
+in
+titlebar
+overrides
+Mica
+.
+*
+/
+media
+not
+(
+-
+moz
+-
+windows
+-
+accent
+-
+color
+-
+in
+-
+titlebar
+)
+{
+/
+*
 Hide
 the
 Firefox
@@ -318,6 +346,7 @@ opacity
 :
 0
 ;
+}
 }
 }
 }
