Bug 1925258 - Enable transition between connecting and loading throbber states. r=emilio,desktop-theme-reviewers,tabbrowser-reviewers,dwalker
Differential Revision: https://phabricator.services.mozilla.com/D225960

UltraBlame original commit: df020056819341b4115a98713ce4585d60eb8252

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2945,76 +2945,6 @@ properties
 :
 fill
 ;
-/
-*
-XXX
-:
-It
-would
-be
-nice
-to
-transition
-between
-the
-"
-connecting
-"
-color
-and
-the
-"
-loading
-"
-color
-(
-see
-the
-[
-progress
-]
-:
-:
-before
-rule
-below
-)
-;
-however
-that
-currently
-forces
-main
-thread
-painting
-.
-When
-this
-is
-fixed
-(
-after
-WebRender
-lands
-)
-we
-can
-do
-something
-like
-transition
-:
-fill
-0
-.
-333s
-opacity
-0
-.
-333s
-;
-*
-/
 fill
 :
 currentColor
@@ -3024,6 +2954,13 @@ opacity
 0
 .
 7
+;
+transition
+:
+fill
+333ms
+opacity
+333ms
 ;
 }
 &
