Bug 1924496 - Replace tab-loading.png, tab-connecting.png, and their 2x / inverted variants with loading.svg. r=settings-reviewers,tabbrowser-reviewers,omc-reviewers,aminomancer,mak
Differential Revision: https://phabricator.services.mozilla.com/D225500

UltraBlame original commit: ffbe33b095c159d2ba708cf2fb2f5dfa8a62bf1c

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -7415,12 +7415,18 @@ language
 -
 loader
 {
-filter
+-
+moz
+-
+context
+-
+properties
 :
-invert
-(
-1
-)
+fill
+;
+fill
+:
+currentColor
 ;
 margin
 -
@@ -7453,31 +7459,6 @@ top
 -
 6px
 ;
-}
-media
-(
-prefers
--
-color
--
-scheme
-:
-dark
-)
-{
-.
-language
--
-loader
-{
-filter
-:
-invert
-(
-0
-)
-;
-}
 }
 .
 tiles
