--- a/browser/components/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/aboutwelcome/content/aboutwelcome.css
@@ -29001,12 +29001,18 @@ language
 -
 loader
 {
-filter
+-
+moz
+-
+context
+-
+properties
 :
-invert
-(
-1
-)
+fill
+;
+fill
+:
+currentColor
 ;
 margin
 -
@@ -29039,33 +29045,6 @@ top
 -
 6px
 ;
-}
-media
-(
-prefers
--
-color
--
-scheme
-:
-dark
-)
-{
-.
-onboardingContainer
-.
-language
--
-loader
-{
-filter
-:
-invert
-(
-0
-)
-;
-}
 }
 .
 onboardingContainer
