--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -10537,17 +10537,6 @@ width
 :
 16px
 ;
-media
-(
-prefers
--
-reduced
--
-motion
-:
-reduce
-)
-{
 &
 [
 busy
@@ -10595,7 +10584,7 @@ opacity
 :
 0
 .
-4
+7
 ;
 }
 &
@@ -10603,245 +10592,23 @@ opacity
 progress
 ]
 {
+color
+:
+var
+(
+-
+-
+tab
+-
+loading
+-
+fill
+)
+;
 opacity
 :
-0
-.
-8
+1
 ;
-}
-}
-media
-(
-prefers
--
-reduced
--
-motion
-:
-no
--
-preference
-)
-{
-&
-[
-busy
-]
-{
-list
--
-style
--
-image
-:
-image
--
-set
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-connecting
-.
-png
-"
-)
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-connecting
-2x
-.
-png
-"
-)
-2x
-)
-;
-}
-&
-[
-progress
-]
-{
-list
--
-style
--
-image
-:
-image
--
-set
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-loading
-.
-png
-"
-)
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-loading
-2x
-.
-png
-"
-)
-2x
-)
-;
-/
-*
-FIXME
-:
-This
-should
-probably
-also
-apply
-in
-regular
-dark
-mode
-?
-*
-/
-:
-root
-[
-lwt
--
-popup
-=
-"
-dark
-"
-]
-&
-[
-progress
-]
-:
-not
-(
-[
-selected
-]
-)
-{
-list
--
-style
--
-image
-:
-image
--
-set
-(
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-loading
--
-inverted
-.
-png
-"
-)
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-loading
--
-inverted
-2x
-.
-png
-"
-)
-2x
-)
-;
-}
-}
 }
 }
 .
