--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/jog_factory.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/jog_factory.jinja2
@@ -69,6 +69,153 @@ endmacro
 -
 %
 }
+{
+%
+macro
+metric_ctor
+(
+metric_type_name
+metric_type
+ctor
+=
+'
+new
+'
+)
+%
+}
+{
+{
+metric_type_name
+|
+Camelize
+if
+not
+metric_type_name
+.
+startswith
+(
+'
+labeled_
+'
+)
+else
+"
+Labeled
+"
+}
+}
+Metric
+:
+:
+{
+%
+if
+metric_type_name
+=
+=
+'
+event
+'
+%
+}
+with_runtime_extra_keys
+{
+%
+else
+%
+}
+{
+{
+ctor
+}
+}
+{
+%
+endif
+%
+}
+(
+metric_id
+.
+into
+(
+)
+meta
+{
+%
+-
+for
+arg_name
+in
+metric_type
+.
+args
+if
+not
+metric_type_name
+.
+startswith
+(
+'
+labeled_
+'
+)
+and
+arg_name
+not
+in
+common_metric_data_args
+-
+%
+}
+{
+{
+arg_name
+}
+}
+.
+unwrap
+(
+)
+{
+%
+-
+endfor
+-
+%
+}
+{
+%
+-
+if
+metric_type_name
+.
+startswith
+(
+'
+labeled_
+'
+)
+-
+%
+}
+labels
+{
+%
+-
+endif
+-
+%
+}
+)
+{
+%
+-
+endmacro
+-
+%
+}
 use
 std
 :
@@ -1031,6 +1178,12 @@ str
 >
 >
 >
+permit_non_commutative_operations_over_ipc
+:
+Option
+<
+bool
+>
 )
 -
 >
@@ -1460,131 +1613,77 @@ indent
 endif
 %
 }
+{
+%
+if
+sometimes_supports_noncommutative_operations
+(
+metric_type_name
+)
+%
+}
+let
+metric
+=
+if
+permit_non_commutative_operations_over_ipc
+.
+unwrap_or
+(
+false
+)
+{
+{
+{
+metric_ctor
+(
+metric_type_name
+metric_type
+ctor
+=
+"
+with_unordered_ipc
+"
+)
+}
+}
+}
+else
+{
+{
+{
+metric_ctor
+(
+metric_type_name
+metric_type
+)
+}
+}
+}
+;
+{
+%
+else
+%
+}
 let
 metric
 =
 {
 {
-metric_type_name
-|
-Camelize
-if
-not
-metric_type_name
-.
-startswith
+metric_ctor
 (
-'
-labeled_
-'
-)
-else
-"
-Labeled
-"
-}
-}
-Metric
-:
-:
-{
-%
-if
 metric_type_name
-=
-=
-'
-event
-'
-%
-}
-with_runtime_extra_keys
-{
-%
-else
-%
-}
-new
-{
-%
-endif
-%
-}
-(
-metric_id
-.
-into
-(
-)
-meta
-{
-%
--
-for
-arg_name
-in
 metric_type
-.
-args
-if
-not
-metric_type_name
-.
-startswith
-(
-'
-labeled_
-'
 )
-and
-arg_name
-not
-in
-common_metric_data_args
--
-%
-}
-{
-{
-arg_name
 }
 }
-.
-unwrap
-(
-)
-{
-%
--
-endfor
--
-%
-}
-{
-%
--
-if
-metric_type_name
-.
-startswith
-(
-'
-labeled_
-'
-)
--
-%
-}
-labels
-{
-%
--
-endif
--
-%
-}
-)
 ;
+{
+%
+endif
+%
+}
 let
 metric32
 :
