--- a/browser/themes/shared/customizableui/panelUI-shared.css
+++ b/browser/themes/shared/customizableui/panelUI-shared.css
@@ -8168,6 +8168,98 @@ fill
 currentColor
 ;
 }
+#
+appMenu
+-
+profiles
+-
+button
+{
+justify
+-
+content
+:
+space
+-
+between
+;
+}
+/
+*
+Set
+the
+-
+-
+themeBg
+and
+-
+-
+themeFg
+variables
+inline
+on
+the
+toolbarbutton
+*
+/
+#
+appMenu
+-
+profiles
+-
+button
+.
+subviewbutton
+-
+iconic
+>
+.
+toolbarbutton
+-
+icon
+.
+subviewbutton
+-
+iconic
+.
+profile
+-
+item
+>
+.
+toolbarbutton
+-
+icon
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+stroke
+;
+fill
+:
+var
+(
+-
+-
+themeBg
+)
+;
+stroke
+:
+var
+(
+-
+-
+themeFg
+)
+;
+}
 /
 *
 Adjust
@@ -14454,46 +14546,67 @@ panels
 *
 /
 #
+PanelUI
+-
 profiles
--
-edit
--
-this
--
-delete
--
-button
+>
+toolbarseparator
 {
-list
--
-style
--
-image
+display
 :
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-edit
-.
-svg
-"
-)
+none
 ;
 }
 #
 profiles
 -
-delete
+header
+-
+title
+{
+margin
+-
+inline
+-
+end
+:
+0
+;
+}
+#
+profiles
+-
+header
+-
+content
+{
+max
+-
+width
+:
+16em
+;
+white
+-
+space
+:
+nowrap
+;
+overflow
+:
+hidden
+;
+text
+-
+overflow
+:
+ellipsis
+;
+}
+#
+profiles
+-
+edit
 -
 this
 -
@@ -14520,7 +14633,90 @@ skin
 /
 icons
 /
-delete
+edit
+-
+outline
+.
+svg
+"
+)
+;
+opacity
+:
+1
+;
+padding
+:
+var
+(
+-
+-
+arrowpanel
+-
+header
+-
+back
+-
+icon
+-
+padding
+)
+;
+margin
+:
+0
+;
+}
+#
+profiles
+-
+edit
+-
+this
+-
+profile
+-
+button
+>
+.
+toolbarbutton
+-
+text
+{
+display
+:
+none
+;
+}
+#
+profiles
+-
+create
+-
+profile
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+plus
 .
 svg
 "
@@ -14542,48 +14738,52 @@ height
 :
 75px
 ;
-}
-#
-profile
 -
-name
-{
-font
+moz
 -
-size
+context
+-
+properties
 :
-1
-.
-667rem
+fill
+stroke
 ;
-padding
--
-block
--
-start
+fill
 :
 var
 (
 -
 -
-space
--
-medium
+themeBg
 )
 ;
-}
-#
-this
--
-profile
--
-buttons
-{
-justify
--
-content
+stroke
 :
-center
+var
+(
+-
+-
+themeFg
+)
+;
+border
+:
+4px
+solid
+var
+(
+-
+-
+panel
+-
+background
+)
+;
+border
+-
+radius
+:
+40px
 ;
 }
 #
@@ -14597,26 +14797,6 @@ items
 :
 center
 ;
-padding
-:
-var
-(
--
--
-space
--
-xxlarge
-)
-0
-var
-(
--
--
-space
--
-medium
-)
-;
 gap
 :
 var
@@ -14627,6 +14807,73 @@ space
 -
 small
 )
+;
+position
+:
+relative
+;
+}
+#
+half
+-
+height
+-
+profile
+{
+background
+:
+var
+(
+-
+-
+themeBg
+)
+;
+width
+:
+100
+%
+;
+height
+:
+50
+%
+;
+z
+-
+index
+:
+-
+1
+;
+position
+:
+absolute
+;
+top
+:
+0
+;
+}
+#
+PanelUI
+-
+profiles
+>
+.
+panel
+-
+subview
+-
+body
+{
+padding
+-
+block
+-
+start
+:
+0
 ;
 }
 /
