--- a/browser/themes/shared/customizableui/panelUI-shared.css
+++ b/browser/themes/shared/customizableui/panelUI-shared.css
@@ -8168,98 +8168,6 @@ fill
 currentColor
 ;
 }
-#
-appMenu
--
-profiles
--
-button
-{
-justify
--
-content
-:
-space
--
-between
-;
-}
-/
-*
-Set
-the
--
--
-themeBg
-and
--
--
-themeFg
-variables
-inline
-on
-the
-toolbarbutton
-*
-/
-#
-appMenu
--
-profiles
--
-button
-.
-subviewbutton
--
-iconic
->
-.
-toolbarbutton
--
-icon
-.
-subviewbutton
--
-iconic
-.
-profile
--
-item
->
-.
-toolbarbutton
--
-icon
-{
--
-moz
--
-context
--
-properties
-:
-fill
-stroke
-;
-fill
-:
-var
-(
--
--
-themeBg
-)
-;
-stroke
-:
-var
-(
--
--
-themeFg
-)
-;
-}
 /
 *
 Adjust
@@ -14546,71 +14454,13 @@ panels
 *
 /
 #
-PanelUI
--
-profiles
->
-toolbarseparator
-{
-display
-:
-none
-;
-}
-#
-profiles
--
-header
--
-title
-{
-margin
--
-inline
--
-end
-:
-0
-;
-}
-#
-profiles
--
-header
--
-content
-{
-max
--
-width
-:
-16em
-;
-white
--
-space
-:
-nowrap
-;
-overflow
-:
-hidden
-;
-text
--
-overflow
-:
-ellipsis
-;
-}
-#
 profiles
 -
 edit
 -
 this
 -
-profile
+delete
 -
 button
 {
@@ -14634,64 +14484,18 @@ skin
 icons
 /
 edit
--
-outline
 .
 svg
 "
 )
 ;
-opacity
-:
-1
-;
-padding
-:
-var
-(
--
--
-arrowpanel
--
-header
--
-back
--
-icon
--
-padding
-)
-;
-margin
-:
-0
-;
 }
 #
 profiles
 -
-edit
+delete
 -
 this
--
-profile
--
-button
->
-.
-toolbarbutton
--
-text
-{
-display
-:
-none
-;
-}
-#
-profiles
--
-create
 -
 profile
 -
@@ -14716,7 +14520,7 @@ skin
 /
 icons
 /
-plus
+delete
 .
 svg
 "
@@ -14738,52 +14542,48 @@ height
 :
 75px
 ;
+}
+#
+profile
 -
-moz
+name
+{
+font
 -
-context
--
-properties
+size
 :
-fill
-stroke
+1
+.
+667rem
 ;
-fill
+padding
+-
+block
+-
+start
 :
 var
 (
 -
 -
-themeBg
+space
+-
+medium
 )
 ;
-stroke
+}
+#
+this
+-
+profile
+-
+buttons
+{
+justify
+-
+content
 :
-var
-(
--
--
-themeFg
-)
-;
-border
-:
-4px
-solid
-var
-(
--
--
-panel
--
-background
-)
-;
-border
--
-radius
-:
-40px
+center
 ;
 }
 #
@@ -14797,6 +14597,26 @@ items
 :
 center
 ;
+padding
+:
+var
+(
+-
+-
+space
+-
+xxlarge
+)
+0
+var
+(
+-
+-
+space
+-
+medium
+)
+;
 gap
 :
 var
@@ -14807,73 +14627,6 @@ space
 -
 small
 )
-;
-position
-:
-relative
-;
-}
-#
-half
--
-height
--
-profile
-{
-background
-:
-var
-(
--
--
-themeBg
-)
-;
-width
-:
-100
-%
-;
-height
-:
-50
-%
-;
-z
--
-index
-:
--
-1
-;
-position
-:
-absolute
-;
-top
-:
-0
-;
-}
-#
-PanelUI
--
-profiles
->
-.
-panel
--
-subview
--
-body
-{
-padding
--
-block
--
-start
-:
-0
 ;
 }
 /
