Bug 1925339 - Adjust z-index where recommended story card context menus were overlapping r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D226034

UltraBlame original commit: 982e540fc64af33ac2d43e4c65ee85558dd65ffc

--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -14598,7 +14598,7 @@ z
 -
 index
 :
-1
+3
 ;
 }
 body
@@ -15447,7 +15447,7 @@ z
 -
 index
 :
-8
+2
 ;
 }
 .
@@ -16067,7 +16067,7 @@ z
 -
 index
 :
-3
+5
 ;
 }
 media
@@ -28402,7 +28402,7 @@ z
 -
 index
 :
-2
+4
 ;
 border
 -
@@ -28606,7 +28606,7 @@ z
 -
 index
 :
-1
+3
 ;
 }
 .
@@ -42896,7 +42896,7 @@ z
 -
 index
 :
-0
+auto
 ;
 }
 .
