Bug 1885582 - Implement correct size and height for tablet/wide devices. r=android-reviewers,007
Implement the correct size for Landscape, tablet or wide devices.

Figma: https://www.figma.com/file/RFz9fYtotQCQuinwcZujZt/Menu-Redesign?type=design&node-id=10858-128447&mode=design&t=lu0I4xY5gKXPXbUz-4

Differential Revision: https://phabricator.services.mozilla.com/D220047

UltraBlame original commit: 67e1a6e48548a8711148ebe288d9955f46133fe0

--- a/mobile/android/fenix/app/src/main/res/values/dimens.xml
+++ b/mobile/android/fenix/app/src/main/res/values/dimens.xml
@@ -2309,6 +2309,41 @@ tap_increase_2
 dimen
 >
 <
+!
+-
+-
+Browser
+Menu
+-
+-
+>
+<
+dimen
+name
+=
+"
+browser_menu_max_width
+"
+>
+640dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
+browser_menu_padding
+"
+>
+56dp
+<
+/
+dimen
+>
+<
 /
 resources
 >
