Bug 1922036 - Make vertical tabs and tools 32px by default r=sidebar-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,nsharpley,sclements,mconley
Differential Revision: https://phabricator.services.mozilla.com/D224362

UltraBlame original commit: 21b6e8d11f953dc1e65d5b26ec9a0f4c79ba99df

--- a/browser/components/sidebar/sidebar-main.css
+++ b/browser/components/sidebar/sidebar-main.css
@@ -56,6 +56,40 @@ MPL
 .
 *
 /
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+verticalTabs
+"
+)
+{
 :
 host
 {
@@ -97,6 +131,26 @@ size
 icon
 )
 ;
+-
+-
+button
+-
+border
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+}
 }
 .
 wrapper
@@ -378,7 +432,7 @@ var
 -
 space
 -
-xsmall
+xxsmall
 )
 ;
 &
