--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -127,6 +127,23 @@ height
 41px
 ;
 }
+/
+*
+Collapsed
+tabs
+should
+be
+square
+so
+set
+width
+to
+match
+the
+min
+height
+*
+/
 -
 -
 tab
@@ -137,7 +154,16 @@ background
 -
 width
 :
-36px
+var
+(
+-
+-
+tab
+-
+min
+-
+height
+)
 ;
 -
 -
@@ -1203,6 +1229,65 @@ pale
 #
 F2F9FF
 ;
+}
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+(
+-
+moz
+-
+bool
+-
+pref
+:
+"
+sidebar
+.
+verticalTabs
+"
+)
+{
+:
+root
+{
+-
+-
+tab
+-
+min
+-
+height
+:
+32px
+;
+-
+-
+tab
+-
+block
+-
+margin
+:
+2px
+;
+}
 }
 #
 tabbrowser
@@ -8366,7 +8451,45 @@ max
 -
 height
 :
-244px
+calc
+(
+5
+*
+(
+var
+(
+-
+-
+tab
+-
+min
+-
+height
+)
++
+2
+*
+var
+(
+-
+-
+tab
+-
+block
+-
+margin
+)
+)
++
+var
+(
+-
+-
+space
+-
+large
+)
+)
 ;
 .
 tab
@@ -8992,6 +9115,39 @@ width
 :
 none
 ;
+.
+tab
+-
+close
+-
+button
+{
+margin
+-
+inline
+-
+end
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+close
+-
+button
+-
+padding
+)
+)
+;
+}
 &
 :
 not
