Bug 1922343 - Hide scrollbar gutter on macOS in vertical tabs r=sidebar-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,emilio,mconley
Differential Revision: https://phabricator.services.mozilla.com/D224363

UltraBlame original commit: d3ceb1ff19cc1dc7c49669633aaf6208bca2d66a

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -777,6 +777,52 @@ currentColor
 )
 ;
 }
+-
+-
+vertical
+-
+tabs
+-
+scrollbar
+-
+color
+:
+auto
+;
+media
+(
+-
+moz
+-
+platform
+:
+macos
+)
+{
+-
+-
+vertical
+-
+tabs
+-
+scrollbar
+-
+color
+:
+color
+-
+mix
+(
+in
+srgb
+currentColor
+26
+%
+transparent
+)
+transparent
+;
+}
 /
 *
 TAB
@@ -7958,6 +8004,23 @@ width
 :
 thin
 ;
+scrollbar
+-
+color
+:
+var
+(
+-
+-
+vertical
+-
+tabs
+-
+scrollbar
+-
+color
+)
+;
 overflow
 -
 y
@@ -8432,6 +8495,23 @@ scrollbar
 width
 :
 thin
+;
+scrollbar
+-
+color
+:
+var
+(
+-
+-
+vertical
+-
+tabs
+-
+scrollbar
+-
+color
+)
 ;
 /
 *
