Bug 1908438 - Drag and drop support for creating a group. r=sthompson,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225799

UltraBlame original commit: ed7f8cd4cb06bda135d3721b7b0fa1ad3d159850

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -595,6 +595,26 @@ dark
 -
 tab
 -
+selected
+-
+shadow
+:
+0
+0
+4px
+rgba
+(
+0
+0
+0
+.
+4
+)
+;
+-
+-
+tab
+-
 outline
 :
 1px
@@ -652,16 +672,8 @@ outline
 -
 offset
 :
-var
-(
 -
--
-toolbarbutton
--
-outline
--
-offset
-)
+1px
 ;
 media
 (
@@ -1559,6 +1571,22 @@ bottom
 ;
 }
 }
+&
+[
+noshadowfortests
+]
+{
+-
+-
+tab
+-
+selected
+-
+shadow
+:
+none
+;
+}
 }
 #
 navigator
@@ -2102,6 +2130,49 @@ z
 index
 :
 2
+;
+}
+&
+:
+is
+(
+[
+visuallyselected
+]
+[
+multiselected
+]
+)
+{
+color
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+textcolor
+)
+;
+color
+-
+scheme
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+color
+-
+scheme
+)
 ;
 }
 }
@@ -5375,16 +5446,6 @@ outline
 offset
 )
 ;
-}
-/
-*
-Selected
-tab
-and
-tab
-hover
-*
-/
 .
 tabbrowser
 -
@@ -5397,10 +5458,7 @@ tab
 -
 stack
 >
-.
-tab
--
-background
+&
 :
 not
 (
@@ -5447,26 +5505,7 @@ color
 )
 ;
 }
-#
-TabsToolbar
-#
-firefox
--
-view
--
-button
-[
-open
-]
->
-.
-toolbarbutton
--
-icon
-.
-tab
--
-background
+&
 :
 is
 (
@@ -5493,36 +5532,19 @@ selected
 bgcolor
 )
 ;
-background
--
-origin
-:
-border
--
-box
-;
-background
--
-repeat
-:
-repeat
--
-x
-;
 box
 -
 shadow
 :
-0
-0
-4px
-rgba
+var
 (
-0
-0
-0
-.
-4
+-
+-
+tab
+-
+selected
+-
+shadow
 )
 ;
 outline
@@ -5542,122 +5564,16 @@ outline
 color
 )
 ;
-#
-tabbrowser
--
-tabs
-[
-noshadowfortests
-]
+}
 &
-{
-box
--
-shadow
-:
-none
-;
-}
-}
-#
-TabsToolbar
-#
-firefox
--
-view
--
-button
-[
-open
-]
->
-.
-toolbarbutton
--
-icon
-.
-tabbrowser
--
-tab
-:
-is
-(
-[
-visuallyselected
-]
-[
-multiselected
-]
-)
-{
-color
-:
-var
-(
--
--
-tab
--
-selected
--
-textcolor
-)
-;
-color
--
-scheme
-:
-var
-(
--
--
-tab
--
-selected
--
-color
--
-scheme
-)
-;
-}
-/
-*
-Add
-a
-focus
-outline
-on
-top
-of
-the
-multiselected
-tabs
-with
-the
-currently
-selected
-tab
-getting
-a
-slightly
-thicker
-outline
-.
-*
-/
-.
-tab
--
-background
 [
 multiselected
 ]
 {
 outline
+-
+color
 :
-1px
-solid
 var
 (
 -
@@ -5668,13 +5584,6 @@ outline
 -
 color
 )
-;
-outline
--
-offset
-:
--
-1px
 ;
 &
 [
@@ -5694,6 +5603,192 @@ offset
 -
 2px
 ;
+}
+}
+#
+tabbrowser
+-
+tabs
+[
+movingtab
+-
+createGroup
+]
+&
+{
+transition
+:
+background
+-
+color
+300ms
+ease
+color
+300ms
+ease
+outline
+-
+color
+300ms
+ease
+;
+&
+[
+dragover
+-
+createGroup
+]
+{
+background
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+-
+pale
+)
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+)
+;
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+-
+pale
+)
+)
+;
+outline
+-
+color
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+-
+pale
+)
+)
+;
+}
+&
+:
+is
+(
+[
+selected
+]
+[
+multiselected
+]
+)
+{
+outline
+-
+color
+:
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+outline
+-
+width
+:
+2px
+;
+outline
+-
+offset
+:
+-
+2px
+;
+}
 }
 }
 /
@@ -9431,6 +9526,101 @@ menu
 item
 *
 /
+#
+TabsToolbar
+#
+firefox
+-
+view
+-
+button
+[
+open
+]
+>
+.
+toolbarbutton
+-
+icon
+{
+background
+-
+color
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+shadow
+)
+;
+outline
+-
+color
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+outline
+-
+color
+)
+;
+color
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+textcolor
+)
+;
+color
+-
+scheme
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+color
+-
+scheme
+)
+;
+}
 :
 root
 :
