Bug 1922594 - Add strings for FxA menu messages and the ability to experiment with the sign-in CTA on both panels. r=fluent-reviewers,omc-reviewers,skhamis,desktop-theme-reviewers,bolsson,pdahiya,hjones
The CTAs for the AppMenu have a collapsed state (since the AppMenu has a Sign In
button to the right of the CTA taking up space), whereas the CTAs for
the FxA avatar panel do not.

Differential Revision: https://phabricator.services.mozilla.com/D224948

UltraBlame original commit: 9372edf868fe71e06460f95c9a45284bbad88bb1

--- a/browser/themes/shared/customizableui/panelUI-shared.css
+++ b/browser/themes/shared/customizableui/panelUI-shared.css
@@ -5938,6 +5938,12 @@ arrowpanel
 color
 )
 ;
+text
+-
+wrap
+:
+wrap
+;
 }
 #
 fxa
@@ -5975,6 +5981,12 @@ weight
 -
 bold
 )
+;
+text
+-
+wrap
+:
+wrap
 ;
 }
 #
