Bug 1923908 - Add a feature flag for Merino Content Recommendations r=android-reviewers,007
Add a feature flag and secret setting for enabling Merino Content Recommendations

Differential Revision: https://phabricator.services.mozilla.com/D226029

UltraBlame original commit: bca6f3ea64a95c0d13bb579b9a1557e4a3619cb7

--- a/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
+++ b/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
@@ -5637,6 +5637,24 @@ pref_key_pocket_sponsored_stories_profile
 string
 >
 <
+string
+name
+=
+"
+pref_key_pocket_content_recommendations
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_pocket_content_recommendations
+<
+/
+string
+>
+<
 !
 -
 -
