--- a/mobile/android/fenix/app/src/main/res/values/static_strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/static_strings.xml
@@ -1455,6 +1455,40 @@ string
 Label
 for
 enabling
+Merino
+content
+recommendations
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_debug_settings_merino_content_recommendations
+"
+translatable
+=
+"
+false
+"
+>
+Enable
+Merino
+Content
+Recommendations
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+enabling
 the
 menu
 redesign
