Bug 1925913 - [devtools] Fix new attribute button in markup view. r=devtools-reviewers,jdescottes.
The button could cover previous element (the tagname or an attribute value),
taking precedence over the clicked element.
To avoid this, we move the button hover the > character.

Differential Revision: https://phabricator.services.mozilla.com/D226278

UltraBlame original commit: 18490cf615bebb7be94e6a06a9df375dd0d35e52

--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -2582,47 +2582,73 @@ newattr
 {
 /
 *
-offset
+Place
 the
-element
-so
-it
-doesn
-'
-t
-take
-any
-space
-when
-not
-focused
+new
+attr
+"
+button
+"
+over
+the
+"
+>
+"
+char
 *
 /
+width
+:
+1ch
+;
 margin
 -
 inline
 -
-start
+end
 :
-calc
-(
 -
-1
-*
-var
-(
--
--
-markup
--
-new
--
-attr
--
-size
-)
-)
+1ch
 ;
+/
+*
+Make
+the
+button
+1
+char
+wide
+(
+it
+'
+s
+easier
+to
+do
+it
+with
+a
+pseudo
+element
+as
+the
+element
+is
+inline
+and
+we
+don
+'
+t
+want
+to
+mess
+the
+vertical
+alignment
+)
+*
+/
 &
 :
 :
@@ -2631,8 +2657,6 @@ before
 content
 :
 "
-\
-00a0
 \
 00a0
 "
@@ -2734,6 +2758,36 @@ icon
 color
 )
 ;
+/
+*
+When
+focused
+make
+the
+button
+2
+chars
+wide
+*
+/
+&
+:
+:
+before
+{
+content
+:
+"
+\
+00a0
+\
+00a0
+"
+/
+"
+"
+;
+}
 }
 }
 .
