Bug 1914793 - Change the protections popup toast to be a button click. r=pbz
Differential Revision: https://phabricator.services.mozilla.com/D224487

UltraBlame original commit: 966b591a8994de3a80c50efffc50ac20c8d09004

--- a/browser/components/controlcenter/content/protectionsPanel.inc.xhtml
+++ b/browser/components/controlcenter/content/protectionsPanel.inc.xhtml
@@ -343,7 +343,7 @@ image
 toolbarbutton
 >
 <
-description
+toolbarbutton
 id
 =
 "
@@ -381,10 +381,10 @@ header
 >
 <
 /
-description
+toolbarbutton
 >
 <
-description
+toolbarbutton
 id
 =
 "
@@ -422,7 +422,7 @@ header
 >
 <
 /
-description
+toolbarbutton
 >
 <
 /
