Bug 1921811 - Make URLBar a popover. r=emilio,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,urlbar-reviewers,dao,mak,dao?
* Fix various z-index/paint order issues by making the urlbar a popover - which moves the open
 urlbar to the top layer, outside the toolbox

* Adjust the urlbar position when the autohide menubar shows and hides

Combines work from nsharpley and sfoster on top of emilio's original popover patch

Differential Revision: https://phabricator.services.mozilla.com/D224201

UltraBlame original commit: d4c4540a5a4ab0797d1602559f14ac3aecab2abd

--- a/browser/themes/shared/sidebar.css
+++ b/browser/themes/shared/sidebar.css
@@ -225,6 +225,25 @@ position
 :
 relative
 ;
+z
+-
+index
+:
+var
+(
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+sidebar
+)
+;
 &
 [
 positionend
@@ -692,7 +711,22 @@ z
 -
 index
 :
-1
+var
+(
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+sidebar
+-
+splitter
+)
 ;
 /
 *
