--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -614,6 +614,74 @@ block
 }
 #
 urlbar
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+row
+;
+flex
+:
+1
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+/
+*
+Reset
+UA
+popover
+rules
+*
+/
+width
+:
+initial
+;
+height
+:
+initial
+;
+inset
+:
+auto
+;
+border
+:
+none
+;
+padding
+:
+initial
+;
+overflow
+:
+initial
+;
+color
+:
+initial
+;
+background
+-
+color
+:
+initial
+;
+}
+#
+urlbar
 #
 searchbar
 {
@@ -658,12 +726,6 @@ width
 :
 1px
 ;
-}
-#
-urlbar
-#
-searchbar
-{
 min
 -
 height
@@ -2195,10 +2257,6 @@ container
 breakout
 ]
 {
-position
-:
-relative
-;
 min
 -
 height
@@ -2225,15 +2283,6 @@ display
 :
 block
 ;
-position
-:
-absolute
-;
-width
-:
-100
-%
-;
 height
 :
 var
@@ -2243,6 +2292,17 @@ var
 urlbar
 -
 height
+)
+;
+width
+:
+var
+(
+-
+-
+urlbar
+-
+width
 )
 ;
 >
@@ -2321,45 +2381,6 @@ disabled
 open
 ]
 {
-/
-*
-The
-z
--
-index
-needs
-to
-be
-big
-enough
-to
-trump
-other
-positioned
-UI
-pieces
-that
-we
-want
-to
-overlay
-.
-3
-is
-used
-in
-the
-tab
-bar
-.
-*
-/
-z
--
-index
-:
-3
-;
 height
 :
 auto
@@ -2376,10 +2397,8 @@ breakout
 extend
 ]
 {
-top
-:
-0
-;
+margin
+-
 left
 :
 calc
@@ -2403,8 +2422,14 @@ width
 :
 calc
 (
-100
-%
+var
+(
+-
+-
+urlbar
+-
+width
+)
 +
 2
 *
@@ -2513,6 +2538,64 @@ padding
 )
 ;
 }
+}
+#
+urlbar
+[
+breakout
+]
+[
+breakout
+-
+extend
+-
+disabled
+]
+[
+open
+]
+{
+/
+*
+Bug
+1925712
+:
+To
+avoid
+flickering
+in
+perf
+tests
+which
+apply
+the
+breakout
+-
+extend
+-
+disabled
+rather
+than
+breakout
+-
+extended
+attribute
+we
+need
+to
+add
+some
+top
+offset
+.
+*
+/
+margin
+-
+top
+:
+3px
+;
 }
 keyframes
 urlbar
