Backed out changeset d4c4540a5a4a (bug 1921811) for causing bc failures on browser_urlbar_keyed_search.js CLOSED TREE
UltraBlame original commit: 206b7c2f223255af764d328d8b5a4d617a4797a3

--- a/browser/themes/shared/sidebar.css
+++ b/browser/themes/shared/sidebar.css
@@ -225,25 +225,6 @@ position
 :
 relative
 ;
-z
--
-index
-:
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-sidebar
-)
-;
 &
 [
 positionend
@@ -711,22 +692,7 @@ z
 -
 index
 :
-var
-(
--
--
-browser
--
-area
--
-z
--
-index
--
-sidebar
--
-splitter
-)
+1
 ;
 /
 *
