--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -614,74 +614,6 @@ block
 }
 #
 urlbar
-{
-display
-:
-flex
-;
-flex
--
-direction
-:
-row
-;
-flex
-:
-1
-;
-box
--
-sizing
-:
-border
--
-box
-;
-/
-*
-Reset
-UA
-popover
-rules
-*
-/
-width
-:
-initial
-;
-height
-:
-initial
-;
-inset
-:
-auto
-;
-border
-:
-none
-;
-padding
-:
-initial
-;
-overflow
-:
-initial
-;
-color
-:
-initial
-;
-background
--
-color
-:
-initial
-;
-}
-#
-urlbar
 #
 searchbar
 {
@@ -726,6 +658,12 @@ width
 :
 1px
 ;
+}
+#
+urlbar
+#
+searchbar
+{
 min
 -
 height
@@ -2257,6 +2195,10 @@ container
 breakout
 ]
 {
+position
+:
+relative
+;
 min
 -
 height
@@ -2283,26 +2225,24 @@ display
 :
 block
 ;
-height
+position
 :
-var
-(
--
--
-urlbar
--
-height
-)
+absolute
 ;
 width
 :
+100
+%
+;
+height
+:
 var
 (
 -
 -
 urlbar
 -
-width
+height
 )
 ;
 >
@@ -2381,6 +2321,45 @@ disabled
 open
 ]
 {
+/
+*
+The
+z
+-
+index
+needs
+to
+be
+big
+enough
+to
+trump
+other
+positioned
+UI
+pieces
+that
+we
+want
+to
+overlay
+.
+3
+is
+used
+in
+the
+tab
+bar
+.
+*
+/
+z
+-
+index
+:
+3
+;
 height
 :
 auto
@@ -2397,8 +2376,10 @@ breakout
 extend
 ]
 {
-margin
--
+top
+:
+0
+;
 left
 :
 calc
@@ -2422,14 +2403,8 @@ width
 :
 calc
 (
-var
-(
--
--
-urlbar
--
-width
-)
+100
+%
 +
 2
 *
@@ -2538,64 +2513,6 @@ padding
 )
 ;
 }
-}
-#
-urlbar
-[
-breakout
-]
-[
-breakout
--
-extend
--
-disabled
-]
-[
-open
-]
-{
-/
-*
-Bug
-1925712
-:
-To
-avoid
-flickering
-in
-perf
-tests
-which
-apply
-the
-breakout
--
-extend
--
-disabled
-rather
-than
-breakout
--
-extended
-attribute
-we
-need
-to
-add
-some
-top
-offset
-.
-*
-/
-margin
--
-top
-:
-3px
-;
 }
 keyframes
 urlbar
