Bug 1925738 - Use text-align:center on group label. r=jswinarton,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226217

UltraBlame original commit: f8730aebfa41b94e55f1754ede0bd308e98d1650

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -6632,9 +6632,9 @@ group
 -
 label
 {
-align
+text
 -
-items
+align
 :
 center
 ;
@@ -6653,52 +6653,21 @@ weight
 bold
 )
 ;
-/
-*
-Copied
-.
-tab
+text
 -
-label
-settings
-*
-/
-margin
--
-inline
+overflow
 :
-0
+ellipsis
 ;
-line
--
-height
-:
-1
-.
-7
-;
-/
-*
-override
-'
-normal
-'
-in
-case
-of
-fallback
-math
-fonts
-with
-huge
-metrics
-*
-/
 white
 -
 space
 :
 nowrap
+;
+overflow
+:
+hidden
 ;
 border
 -
@@ -6714,6 +6683,12 @@ border
 -
 radius
 )
+;
+line
+-
+height
+:
+2
 ;
 min
 -
