Bug 1919614 - Make tab group label slimmer as per spec, even when the font size is relatively large (e.g. Linux), and have it adjust to UI density. r=jswinarton,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226218

UltraBlame original commit: 609e72e53f5382b6853d4425164821de00a37ecb

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -127,6 +127,35 @@ height
 41px
 ;
 }
+-
+-
+tab
+-
+group
+-
+label
+-
+height
+:
+max
+(
+1
+.
+5em
+var
+(
+-
+-
+tab
+-
+min
+-
+height
+)
+-
+14px
+)
+;
 /
 *
 Collapsed
@@ -6688,19 +6717,57 @@ line
 -
 height
 :
-2
+calc
+(
+var
+(
+-
+-
+tab
+-
+group
+-
+label
+-
+height
+)
+-
+2px
+)
 ;
 min
 -
 height
 :
-2em
+var
+(
+-
+-
+tab
+-
+group
+-
+label
+-
+height
+)
 ;
 min
 -
 width
 :
-2em
+var
+(
+-
+-
+tab
+-
+group
+-
+label
+-
+height
+)
 ;
 max
 -
