Bug 1925743 - Adjust tab group label margin to spec. r=jswinarton,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226219

UltraBlame original commit: 11874074521579841d81de0bc8c870e3a19541ef

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -6468,6 +6468,7 @@ the
 tab
 group
 label
+.
 *
 Use
 margin
@@ -6492,26 +6493,6 @@ the
 tab
 group
 label
-.
-Left
-margin
-should
-be
-larger
-in
-*
-order
-to
-make
-the
-tab
-group
-look
-more
-separated
-from
-other
-tabs
 .
 *
 Use
@@ -6552,32 +6533,7 @@ inline
 -
 start
 :
-calc
-(
-var
-(
--
--
-tab
--
-overflow
--
-clip
--
-margin
-)
-+
-var
-(
--
--
-tab
--
-block
--
-margin
-)
-)
+3px
 ;
 padding
 -
@@ -6585,18 +6541,7 @@ inline
 -
 end
 :
-var
-(
--
--
-tab
--
-overflow
--
-clip
--
-margin
-)
+3px
 ;
 position
 :
@@ -6919,7 +6864,7 @@ pale
 )
 )
 ;
-outline
+border
 :
 1px
 solid
