Bug 1916815 - Replace --in-content-accent-color variable with the --color-accent-primary token r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D224509

UltraBlame original commit: f94bb3dca98151fed337907ccc9bb09d90882abb

--- a/browser/themes/shared/preferences/containers-dialog.css
+++ b/browser/themes/shared/preferences/containers-dialog.css
@@ -276,13 +276,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
@@ -305,15 +303,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
--
-active
+primary
 )
 ;
 }
