--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -983,13 +983,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 15
 %
@@ -1002,13 +1000,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 1px
 dotted
@@ -2847,13 +2843,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
@@ -5107,13 +5101,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
