--- a/browser/themes/shared/preferences/privacy.css
+++ b/browser/themes/shared/preferences/privacy.css
@@ -86,13 +86,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 20
 %
@@ -1131,13 +1129,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
@@ -1163,13 +1159,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
