--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -523,13 +523,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 color
@@ -3912,13 +3910,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 ;
@@ -4719,13 +4715,11 @@ var
 (
 -
 -
-in
--
-content
+color
 -
 accent
 -
-color
+primary
 )
 ;
 }
