Bug 1900074 - Replace bespoke nav in about:policies with moz-page-nav - r=hjones,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225391

UltraBlame original commit: c1da2636ee19fc3169b82239ad0516920c468f3f

--- a/browser/components/enterprisepolicies/content/aboutPolicies.html
+++ b/browser/components/enterprisepolicies/content/aboutPolicies.html
@@ -291,47 +291,27 @@ body
 "
 >
 <
-div
+moz
+-
+page
+-
+nav
 id
 =
 "
 categories
+-
+nav
 "
 >
 <
-div
-class
-=
-"
-category
-"
-selected
-=
-"
-true
-"
-id
-=
-"
-category
+moz
 -
-active
-"
-tabindex
-=
-"
-0
-"
->
-<
-label
-class
-=
-"
-category
+page
 -
-name
-"
+nav
+-
+button
 data
 -
 l10n
@@ -345,44 +325,58 @@ policies
 -
 tab
 "
->
-<
-/
-label
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-category
-"
 id
 =
 "
 category
 -
-documentation
+active
 "
-tabindex
+view
 =
 "
-0
+view
+-
+one
+"
+iconSrc
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+policies
+/
+policies
+-
+active
+.
+svg
 "
 >
 <
-label
-class
-=
-"
-category
+/
+moz
 -
-name
-"
+page
+-
+nav
+-
+button
+>
+<
+moz
+-
+page
+-
+nav
+-
+button
 data
 -
 l10n
@@ -394,44 +388,58 @@ documentation
 -
 tab
 "
->
-<
-/
-label
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-category
-"
 id
 =
 "
 category
 -
-errors
+documentation
 "
-tabindex
+view
 =
 "
-0
+view
+-
+two
+"
+iconSrc
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+policies
+/
+policies
+-
+documentation
+.
+svg
 "
 >
 <
-label
-class
-=
-"
-category
+/
+moz
 -
-name
-"
+page
+-
+nav
+-
+button
+>
+<
+moz
+-
+page
+-
+nav
+-
+button
 data
 -
 l10n
@@ -443,18 +451,57 @@ errors
 -
 tab
 "
+id
+=
+"
+category
+-
+errors
+"
+view
+=
+"
+view
+-
+three
+"
+iconSrc
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+policies
+/
+policies
+-
+error
+.
+svg
+"
 >
 <
 /
-label
+moz
+-
+page
+-
+nav
+-
+button
 >
 <
 /
-div
->
-<
-/
-div
+moz
+-
+page
+-
+nav
 >
 <
 div
