Bug 1918524 - Style about:deleteprofile. r=jhirsch,desktop-theme-reviewers,firefox-desktop-core-reviewers ,hjones
Differential Revision: https://phabricator.services.mozilla.com/D226017

UltraBlame original commit: 8e6ae90f6bc897e1f35fe039402e51b11a05472c

--- a/browser/components/profiles/content/delete-profile-card.css
+++ b/browser/components/profiles/content/delete-profile-card.css
@@ -56,3 +56,167 @@ MPL
 .
 *
 /
+import
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+profiles
+/
+profiles
+-
+pages
+.
+css
+"
+)
+;
+.
+data
+-
+list
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+gap
+:
+var
+(
+-
+-
+space
+-
+large
+)
+;
+padding
+:
+var
+(
+-
+-
+space
+-
+xxlarge
+)
+;
+margin
+-
+inline
+-
+end
+:
+calc
+(
+2
+*
+var
+(
+-
+-
+space
+-
+xxlarge
+)
+)
+;
+margin
+-
+block
+-
+end
+:
+var
+(
+-
+-
+space
+-
+large
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+-
+odd
+)
+;
+border
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+}
+.
+data
+-
+list
+-
+item
+{
+display
+:
+flex
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+font
+-
+size
+:
+var
+(
+-
+-
+font
+-
+size
+-
+large
+)
+;
+}
