--- a/browser/components/profiles/content/edit-profile-card.css
+++ b/browser/components/profiles/content/edit-profile-card.css
@@ -56,132 +56,28 @@ MPL
 .
 *
 /
+import
+url
+(
+"
+chrome
 :
-host
-{
--
--
-header
--
-avatar
--
-size
-:
-80px
-;
--
--
-header
--
-avatar
--
-img
--
-size
-:
-40px
-;
-}
-html
-body
-{
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-}
-body
-{
-display
-:
-flex
-;
-justify
--
+/
+/
+browser
+/
 content
-:
-center
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-background
+/
+profiles
+/
+profiles
 -
-color
-:
-var
-(
--
--
-newtab
--
-background
--
-color
-var
-(
--
--
-in
--
-content
--
-page
--
-background
-)
+pages
+.
+css
+"
 )
 ;
-}
-edit
--
-profile
--
-card
-{
-display
-:
-block
-;
-max
--
-width
-:
-80
-%
-;
-margin
--
-top
-:
-calc
-(
-2
-*
-var
-(
--
--
-space
--
-xxlarge
-)
-)
-;
-}
 #
 edit
 -
