--- a/browser/components/profiles/content/delete-profile.html
+++ b/browser/components/profiles/content/delete-profile.html
@@ -318,6 +318,28 @@ mjs
 script
 >
 <
+script
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+contentTheme
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
